--- a/.github/workflows/pr-perf-test.yaml
+++ b/.github/workflows/pr-perf-test.yaml
@@ -1,4 +1,5 @@
 on:
+  pull_request:
   workflow_dispatch:
 
 jobs:
@@ -31,7 +32,7 @@ jobs:
         working-directory: output
 
       - uses: actions/github-script@v6
-        continue-on-error: true
+        if: github.event_name == 'pull_request'
         env:
           REPORT: "Plots\n${{ steps.report.outputs.stdout }}"
         with:
@@ -51,19 +52,3 @@ jobs:
               repo: context.repo.repo,
               body: output
             })
-
-  pr-perf-test-complete:
-    # Only runs on success
-    name: PR - performance test complete
-    runs-on: ubuntu-latest
-    needs:
-      - pr-perf-test-run
-    permissions:
-      pull-requests: write
-    steps:
-      - uses: actions-ecosystem/action-add-labels@v1
-        name: Label the PR
-        with:
-          labels: ci/performance-test-ok
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          number: ${{ github.event.pull_request.number }}
