--- a/.github/workflows/pr-perf-test.yaml
+++ b/.github/workflows/pr-perf-test.yaml
@@ -14,6 +14,7 @@ jobs:
 
       - name: Upload plots to CML
         run: |
+          docker pull -q dvcorg/cml-py3:latest
           for FILE in *.png; do
             echo "Handling $FILE"
             docker run --rm -t \
